# python-monorepo

./: README.md  pyproject.toml  workspace.toml
development/: 1.py
