[tool.poetry]
name = "python-monorepo"
version = "0.1.0"
description = "testing polylith architecture in python"
authors = ["Vikas Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
